# backend/internal/schemas/user.go
@@ -1,6 +1,10 @@
 package schemas
 
 type CreateUser struct {
-	Admin_id	uint  `json:"admin_id" validate:"required"`
+	Admin_id	string  `json:"admin_id" validate:"required"`
 	Name		string  `json:"name" validate:"required"`
+}
+
+type LoginByCode struct {
+	Code uint `json:"code" validate:"required"`
 }
